Fixed syntax error and shifted volume icon

--- a/client/css/main.css
+++ b/client/css/main.css
@@ -74,7 +74,7 @@ body.showing-playlist .toggle-mute {
     font-size: 1.5em;
     left: 10px;
     position: absolute;
-    top: 90px;
+    top: 50px;
     cursor: pointer;
     transition: 0.3s;
 }
@@ -90,25 +90,6 @@ body.showing-playlist .toggle-mute {
 body.showing-playlist .lastfm-scrobble {
     left: 400px;
 }
-
-/* QUEUE */
-.show-queue {
-    font-size: 1.5em;
-    left: 10px;
-    position: absolute;
-    top: 50px;
-    cursor: pointer;
-    transition: 0.3s;
-}
-
-.show-queue:hover {
-    color: white;
-}
-
-body.showing-playlist .show-queue {
-    left: 400px;
-}
-
 
 /* PLAYLIST */
 .show-playlist {
